Update AlfrescoSetup.sh